--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="fr.moya.moc.twoh_jdr_app">
+          xmlns:tools="http://schemas.android.com/tools" package="fr.moya.moc.twoh_jdr_app">
 
     <application
             android:allowBackup="true"
@@ -8,9 +8,15 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".CapacitiesActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".CapacityFormActivity"
+                android:label="@string/capacityFormTitle"
+                android:parentActivityName=".CapacitiesActivity">
+        </activity>
+        <activity
+                android:name=".CapacitiesActivity"
+                android:label="@string/capacitiesActivityTitle"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".HomeActivity"
